--- a/x-pack/functionbeat/docs/setting-up-running.asciidoc
+++ b/x-pack/functionbeat/docs/setting-up-running.asciidoc
@@ -21,6 +21,8 @@ This section includes additional information on how to set up and run
 
 * <<command-line-options>>
 
+* <<export-cloudformation-template>>
+
 
 //MAINTAINERS: If you add a new file to this section, make sure you update the bulleted list ^^ too.
 
@@ -32,3 +34,5 @@ include::{libbeat-dir}/docs/keystore.asciidoc[]
 
 [role="xpack"]
 include::{libbeat-dir}/docs/command-reference.asciidoc[]
+
+include::export-cloudformation-template.asciidoc[]
